Added Localdb Identity Database and included it in commit. However please note that whenever you'll committing the file then at the moment the local sqlserver instance should be in a 'stopped state'. You can stop (localdb)\mssqlLocaldb instance by typing following command in command line - 'sqllocaldb stop mssqllocaldb'

--- a/Identity.Web/Web.config
+++ b/Identity.Web/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   
   <connectionStrings>
-    <add name="DatabaseConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=Identity;Trusted_Connection=True;MultipleActiveResultSets=True;" />
+    <add name="DatabaseConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\mssqllocaldb;AttachDbFilename=|DataDirectory|\Identity.mdf;Initial Catalog=Identity;Trusted_Connection=True;MultipleActiveResultSets=True;" />  
   </connectionStrings>
 
   <appSettings>
